--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=order
+spring.profiles.active=test
+spring.jpa.open-in-view=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
